SM Stats sorted > Member grid working - minor overlapping issues

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -8,7 +8,7 @@
   }
 
 h1, h3, p {
-  color: white;
+  color: $defult-white;
 }
 
 header h1, header h3 {
@@ -21,9 +21,8 @@ header h1, header h3 {
 }
 
 header h3 {
-
-text-align: unset;
-margin-bottom: 10px;
+  text-align: unset;
+  margin-bottom: 10px;
 
 }
 
@@ -33,8 +32,48 @@ margin: 0;
 }
 
 //The font is going black
-.traffic-label, .daily-container daily-label {
+.traffic-label, .daily-container .daily-label {
   font-size: 15px;
   text-align: center;
   color: black;
 }
+
+// Social Stats Grid Font Styles
+
+.platform { 
+color: $main-purple;
+margin-top: 10px;
+margin-bottom: -25px;
+margin-right: 31px;
+}
+
+.stat-number {
+font-size: 30px;
+color: grey;
+margin-top: 20px;
+margin-bottom: 10px;
+margin-right: 20px;
+}
+
+
+// Members Font Styles
+
+.member-label {
+text-align: left;
+color: black;
+margin-left: 15px;
+}
+
+.profile-email {
+text-decoration-style: none;
+color: $main-purple;
+}
+
+.members-text, .profile-name, .profile-birth {
+color: black;
+margin-bottom: 20px;
+
+}
+
+
+
