--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -4,10 +4,10 @@
 
   
 .alert-btn {
-color: white; 
+color: $defult-white; 
 width: 70%;
-border: 1px solid #826aee;
-background-color: #826aee;
+border: 1px solid $main-purple;
+background-color: $main-purple;
 margin: auto;
 border-radius: 5px;
 margin-top: 10px;
