--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -9,7 +9,10 @@
 // Col Colors
 
 
-$col-color-12: #80e8d1;
+$main-purple: #826AEE;
+$secondary-purple: #4F2CEE;
+$defult-white: white;
+$seconday-white: #e0e0eb;
 
 
 // Buttons
